@@ -1,3 +1,14 @@
+2010-02-11  Joseph Pecoraro  <joepeck@webkit.org>
+
+        Reviewed by Timothy Hatcher.
+
+        Web Inspector: Editing Styles Cannot Tab Backwards from a New Style Item
+        https://bugs.webkit.org/show_bug.cgi?id=34872
+
+        * inspector/front-end/StylesSidebarPane.js:
+        (WebInspector.StylePropertiesSection.prototype.update): triggers afterUpdate
+        (WebInspector.StylePropertiesSection.prototype.afterUpdate): factored out _afterUpdate handling
+
 2010-02-11  Nikolas Zimmermann  <nzimmermann@rim.com>
 
         Reviewed by Eric Seidel.
